apps/security/authentik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: auth
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.umhomelab.com`) || Host(`www.auth.umhomelab.com`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: auth
          port: 80
    - match: PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 100
      services:
        - name: authentik-server
          namespace: auth
          port: 80
  tls: {}
